# sierpinski_triangle_generator

./: Cargo.toml
src/: main.rs
