[package]
name = "sierpinski_triangle_generator"
version = "0.1.0"
authors = ["maslabgamer <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.8.3"

[profile.dev]
opt-level = 3
